Add title and subtitle to index page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: page
+title: Cottonglow
+subtitle: A developer's collection of thoughts and exploration on cloud computing
 use-site-title: true
 ---
 
